Fuxed mobile overflow issues

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -67,8 +67,9 @@ body {
 /* link styled as a button in the footer */
 .footer-btn {
     background-color: var(--contrast);
-   display: inline-block;
-   margin: auto 2rem;
+    display: inline-block;
+    height: 4rem;
+    /* margin: auto; */
 }
 
 .footer-btn:hover {
@@ -95,7 +96,7 @@ nav {
     -webkit-box-shadow: 2px 2px 24px 0px var(--off-black);
     -moz-box-shadow: 2px 2px 24px 0px var(--off-black);
     box-shadow: 2px 2px 24px 0px var(--off-black);
-/* padding: 0 10rem; */
+    /* padding: 0 10rem; */
 }
 
 
@@ -133,7 +134,8 @@ nav {
     position: absolute;
     top: 1.75rem;
     right: 2rem;
-    display: none; /* hide by default */
+    display: none;
+    /* hide by default */
     flex-direction: column;
     justify-content: space-between;
     width: 30px;
@@ -192,7 +194,7 @@ section {
 }
 
 section:nth-of-type(even) {
-background-color: var(--grey-400);
+    background-color: var(--grey-400);
 }
 
 .center {
@@ -228,13 +230,13 @@ h1 {
 }
 
 h2 {
-font-size: 1.5rem;
+    font-size: 1.5rem;
     width: 150px;
-   text-align: center; 
-   color: var(--off-white);
-   border-bottom: 1px solid var(--off-white); 
-   line-height: 0.1rem;
-   margin: 1rem;
+    text-align: center;
+    color: var(--off-white);
+    border-bottom: 1px solid var(--off-white);
+    line-height: 0.1rem;
+    margin: 1rem;
 }
 
 h2 span {
@@ -261,8 +263,8 @@ h4 {
 }
 
 #studio-masazu {
-text-align: left;
-margin-bottom: 1.2rem;
+    text-align: left;
+    margin-bottom: 1.2rem;
 }
 
 #title {
@@ -296,7 +298,7 @@ margin-bottom: 1.2rem;
     flex-direction: column;
     gap: 1.5rem;
     align-items: center;
-  justify-content: center;
+    justify-content: center;
 }
 
 @media (min-width: 700px) {
@@ -328,7 +330,8 @@ figcaption {
 }
 
 #prices h2>span {
-    background-color: black; /* change this */
+    background-color: black;
+    /* change this */
 }
 
 /* table */
@@ -337,15 +340,19 @@ table {
     opacity: 0.7;
     backdrop-filter: blur(10px);
     margin: auto;
+    max-width: 400px;
     border-radius: 0.5rem;
 }
 
-th, td {
+th,
+td {
     padding: 1rem;
 }
 
 @media (min-width: 600px) {
-    th, td {
+
+    th,
+    td {
         padding: 1.5rem;
     }
 }
@@ -363,11 +370,13 @@ td:nth-of-type(2) {
 .tables-contact-sctn {
     display: flex;
     flex-direction: column;
-    width: 100%;    
-  justify-content: space-around;
+    width: 100%;
+    
+    margin: auto;
+    justify-content: space-around;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 750px) {
     .tables-contact-sctn {
         flex-direction: row;
     }
@@ -375,18 +384,25 @@ td:nth-of-type(2) {
 
 .tables-contact-sctn article {
     background-color: var(--off-white);
-    padding-bottom: 2rem;
+    /* padding-bottom: 2rem; */
     border-radius: 0.5rem;
+    max-width: 400px;
+    margin: auto;
+    margin-bottom: 2rem;
     -webkit-box-shadow: 0px 0px 24px 0px var(--grey-600);
     -moz-box-shadow: 0px 0px 24px 0px var(--grey-600);
     box-shadow: 0px 0px 24px 0px var(--grey-600);
 }
 
 
-.tables-contact-sctn table {
-    min-width: 400px;
-    width: 35vw;
-    max-width: 900px;
+.tables-contact-sctn article:last-of-type {
+    margin-bottom: unset;
+}
+
+@media (min-width: 750px) {
+    .tables-contact-sctn article {
+        height: 450px;
+    }
 }
 
 /* footer */
@@ -433,30 +449,41 @@ footer hgroup p {
 .footer-top {
     display: flex;
     flex-direction: column-reverse;
+    align-items: center;
+    align-content: center;
     justify-content: space-between;
+    justify-items: start;
     width: 70vw;
+    gap: 2rem;
     margin: auto;
-    padding-bottom: 2rem;
+    margin-bottom: 2rem;
 }
+
 
 footer img {
     width: 100px;
-    margin: 2rem auto;
+
+    /* margin: auto; */
 }
 
 .footer-info {
-display: flex;
-flex-direction: column;
-margin: auto;
-align-content: center;
-gap: 2rem;
-width: 70vw;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    align-content: center;
+    gap: 2rem;
+    width: 70vw;
+}
+
+.right-align {
+    float: right;
 }
 
 @media (min-width: 600px) {
     footer hgroup {
         width: 100%;
     }
+
     .footer-top {
         flex-direction: row;
     }
